...
            <View style={styles.spacer} />
            <TouchableOpacity
              onPress={() => {
                Sentry.captureException(new Error('Test Error'));
              }}
              custom-sentry-label-name="captureException via custom Sentry label">
              <Text style={styles.buttonText}>Capture Exception</Text>
            </TouchableOpacity>
            <View style={styles.spacer} />
            <TouchableOpacity
              onPress={() => {
                throw new Error('Thrown Error');
              }}
...
