...
        onPress={notWeb() ? Keyboard.dismiss : undefined}
        accessible={false}
        accessibilityElementsHidden={false}
      >
        <View style={styles.container}>
          <View style={styles.titleContainer}>
            <Text style={styles.title} testID="sentry-feedback-form-title">
              {text.formTitle}
            </Text>
            {config.showBranding && (
              <Image source={{ uri: sentryLogo }} style={styles.sentryLogo} testID="sentry-logo" />
            )}
          </View>

          {config.showName && (
            <>
              <Text style={styles.label}>
                {text.nameLabel}
                {config.isNameRequired && ` ${text.isRequiredLabel}`}
              </Text>
              <TextInput
                style={styles.input}
                testID="sentry-feedback-name-input"
                placeholder={text.namePlaceholder}
                value={name}
                onChangeText={value => this.setState({ name: value })}
                autoCorrect={false}
                spellCheck={false}
              />
...
              <Text style={styles.label}>
                {text.emailLabel}
                {config.isEmailRequired && ` ${text.isRequiredLabel}`}
              </Text>
              <TextInput
                style={styles.input}
                testID="sentry-feedback-email-input"
                placeholder={text.emailPlaceholder}
                keyboardType={'email-address' as KeyboardTypeOptions}
                autoCapitalize="none"
                autoCorrect={false}
                spellCheck={false}
                value={email}
...
          <Text style={styles.label}>
            {text.messageLabel}
            {` ${text.isRequiredLabel}`}
          </Text>
          <TextInput
            style={[styles.input, styles.textArea]}
            testID="sentry-feedback-message-input"
            placeholder={text.messagePlaceholder}
            value={description}
            onChangeText={value => this.setState({ description: value })}
            multiline
            autoCorrect={autoCorrect}
            spellCheck={spellCheck}
...
              onPress={() => {
                hideFeedbackButton();
                onCancel();
                showScreenshotButton();
              }}
            >
              <Text style={styles.takeScreenshotText} testID="sentry-feedback-take-screenshot-button">
                {text.captureScreenshotButtonLabel}
              </Text>
            </TouchableOpacity>
          )}
          <TouchableOpacity style={styles.submitButton} onPress={this.handleFeedbackSubmit}>
            <Text style={styles.submitText} testID="sentry-feedback-submit-button">
              {text.submitButtonLabel}
            </Text>
          </TouchableOpacity>

          <TouchableOpacity style={styles.cancelButton} onPress={onCancel}>
            <Text style={styles.cancelText}>{text.cancelButtonLabel}</Text>
...
