...
      <TouchableOpacity
        style={styles.triggerButton}
        onPress={takeScreenshot}
        accessibilityLabel={text.triggerAriaLabel}
      >
        <Image source={{ uri: screenshotIcon }} style={styles.triggerIcon} />
        <Text style={styles.triggerText} testID="sentry-feedback-screenshot-button">
          {text.triggerLabel}
        </Text>
      </TouchableOpacity>
    );
  }
}
...
