...
          tabBarLabel: 'Errors',
          tabBarIcon: ({ focused, color, size }) => (
            <Ionicons
              name={focused ? 'bug' : 'bug-outline'}
              size={size}
              color={color}
              testID="errors-tab-icon"
            />
          ),
        }}
      />
      <BottomTabNavigator.Screen
        name="PerformanceTab"
...
          tabBarLabel: 'Performance',
          tabBarIcon: ({ focused, color, size }) => (
            <Ionicons
              name={focused ? 'speedometer' : 'speedometer-outline'}
              size={size}
              color={color}
              testID="performance-tab-icon"
            />
          ),
        }}
      />
      <BottomTabNavigator.Screen
        name="PlaygroundTab"
...
