...
  return (
    <>
      <StatusBar barStyle="dark-content" />
      <ScrollView style={styles.mainView}>
        <TimeToFullDisplay record={true} />
        <Button
          title="Open Spaceflight News"
          onPress={() => {
            props.navigation.navigate('SpaceflightNewsScreen');
          }}
        />
        <Button
          title="Preload Spaceflight News"
...
